@@ -1,6 +1,18 @@
 source "http://rubygems.org"
-gem "jeweler"
-gem "rspec"
-gem "gherkin"
-gem "term-ansicolor"
 
+gem 'gherkin', '~> 2.2.0'
+gem 'term-ansicolor', '~> 1.0.5'
+gem 'builder', '~> 2.1.2'
+gem 'diff-lcs', '~> 1.1.2'
+gem 'json_pure', '~> 1.4.3'
+
+group :development do
+  gem 'rake', '~> 0.8.7'
+  gem 'jeweler', '~> 1.4.0'
+  gem 'nokogiri', '~> 1.4.2'
+  gem 'prawn', '= 0.8.4'
+  gem 'prawn-layout', '= 0.8.4'
+  gem 'rspec', '~> 2.0.0.beta.19'
+  gem 'syntax', '~> 1.0.0'
+  gem 'spork', '~> 0.8.4'
+end
