@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Aslak Helles\303\270y"]
-  s.date = %q{2010-07-26}
+  s.date = %q{2010-08-07}
   s.default_executable = %q{cucumber}
   s.description = %q{Behaviour Driven Development with elegance and joy}
   s.email = %q{cukes@googlegroups.com}
@@ -23,6 +23,7 @@ Gem::Specification.new do |s|
      ".gitignore",
      ".rspec",
      "Caliper.yml",
+     "Gemfile",
      "History.txt",
      "LICENSE",
      "README.rdoc",
@@ -715,39 +716,45 @@ for important information about this release. Happy cuking!
 
     if Gem::Version.new(Gem::VERSION) >= Gem::Version.new('1.2.0') then
       s.add_runtime_dependency(%q<gherkin>, ["~> 2.2.0"])
-      s.add_runtime_dependency(%q<term-ansicolor>, ["~> 1.0.4"])
+      s.add_runtime_dependency(%q<term-ansicolor>, ["~> 1.0.5"])
       s.add_runtime_dependency(%q<builder>, ["~> 2.1.2"])
       s.add_runtime_dependency(%q<diff-lcs>, ["~> 1.1.2"])
       s.add_runtime_dependency(%q<json_pure>, ["~> 1.4.3"])
+      s.add_development_dependency(%q<rake>, ["~> 0.8.7"])
+      s.add_development_dependency(%q<jeweler>, ["~> 1.4.0"])
       s.add_development_dependency(%q<nokogiri>, ["~> 1.4.2"])
       s.add_development_dependency(%q<prawn>, ["= 0.8.4"])
       s.add_development_dependency(%q<prawn-layout>, ["= 0.8.4"])
-      s.add_development_dependency(%q<rspec>, ["~> 2.0.0.beta.15"])
+      s.add_development_dependency(%q<rspec>, ["~> 2.0.0.beta.19"])
       s.add_development_dependency(%q<syntax>, ["~> 1.0.0"])
       s.add_development_dependency(%q<spork>, ["~> 0.8.4"])
     else
       s.add_dependency(%q<gherkin>, ["~> 2.2.0"])
-      s.add_dependency(%q<term-ansicolor>, ["~> 1.0.4"])
+      s.add_dependency(%q<term-ansicolor>, ["~> 1.0.5"])
       s.add_dependency(%q<builder>, ["~> 2.1.2"])
       s.add_dependency(%q<diff-lcs>, ["~> 1.1.2"])
       s.add_dependency(%q<json_pure>, ["~> 1.4.3"])
+      s.add_dependency(%q<rake>, ["~> 0.8.7"])
+      s.add_dependency(%q<jeweler>, ["~> 1.4.0"])
       s.add_dependency(%q<nokogiri>, ["~> 1.4.2"])
       s.add_dependency(%q<prawn>, ["= 0.8.4"])
       s.add_dependency(%q<prawn-layout>, ["= 0.8.4"])
-      s.add_dependency(%q<rspec>, ["~> 2.0.0.beta.15"])
+      s.add_dependency(%q<rspec>, ["~> 2.0.0.beta.19"])
       s.add_dependency(%q<syntax>, ["~> 1.0.0"])
       s.add_dependency(%q<spork>, ["~> 0.8.4"])
     end
   else
     s.add_dependency(%q<gherkin>, ["~> 2.2.0"])
-    s.add_dependency(%q<term-ansicolor>, ["~> 1.0.4"])
+    s.add_dependency(%q<term-ansicolor>, ["~> 1.0.5"])
     s.add_dependency(%q<builder>, ["~> 2.1.2"])
     s.add_dependency(%q<diff-lcs>, ["~> 1.1.2"])
     s.add_dependency(%q<json_pure>, ["~> 1.4.3"])
+    s.add_dependency(%q<rake>, ["~> 0.8.7"])
+    s.add_dependency(%q<jeweler>, ["~> 1.4.0"])
     s.add_dependency(%q<nokogiri>, ["~> 1.4.2"])
     s.add_dependency(%q<prawn>, ["= 0.8.4"])
     s.add_dependency(%q<prawn-layout>, ["= 0.8.4"])
-    s.add_dependency(%q<rspec>, ["~> 2.0.0.beta.15"])
+    s.add_dependency(%q<rspec>, ["~> 2.0.0.beta.19"])
     s.add_dependency(%q<syntax>, ["~> 1.0.0"])
     s.add_dependency(%q<spork>, ["~> 0.8.4"])
   end
