@@ -3,6 +3,8 @@ $:.unshift(File.dirname(__FILE__) + '/../lib')
 $:.unshift(File.dirname(__FILE__))
 
 require 'rubygems'
+require 'bundler'
+Bundler.setup
 
 begin
   require 'rspec'
